--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Burç Uygulaması</title>
+    <title>Burç Rehberi | Günlük Burç Yorumları</title>
+    <meta name="description" content="Ücretsiz günlük burç yorumları, aşk, para ve sağlık tahminleri">
+    <meta property="og:title" content="Burç Rehberi">
+    <meta property="og:description" content="Kişiselleştirilmiş burç yorumlarını keşfedin">
+    <meta property="og:image" content="https://burc-uygulamasi.vercel.app/social-preview.jpg">
+    <meta property="og:url" content="https://burc-uygulamasi.vercel.app">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="theme-color" content="#4A3267">
   </head>
   <body>
     <div id="root"></div>
